# Lipsum

./: .gitignore  README.md  format.sh
lipsum_builder/: main.cpp  makefile
lipsum_decorator/: main.cpp  makefile
lipsum_iterator/: main.cpp  makefile
lipsum_markov/: CMakeLists.txt  main.cpp
lipsum_mvc/: CMakeLists.txt  aw_observer.hpp  c_view.cpp  c_view.hpp  l_model.cpp  l_model.hpp  main.cpp
